--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,19 @@
 }
 
 :root {
-  --container-color: white;
+  --container-color: rgb(255, 255, 255);
   --text-color: #0b0b0b;
   --light-color: #f1f1f1;
-  --primary-color: #00f0e6;
+  --primary-color: #19d946;
   --secondary-color: #0a80a8;
   --gray-color: #414141;
-  --secon-bg-color: #ececece3;
+  --secon-bg-color: #f7fff5e3;
   --norma-font: 2rem;
   --big-font: 2.5rem;
   --neon-box-shadow: 0 1.5px 0.6rem var(--primary-color);
   --border-container: 1px solid var(--primary-color);
   --h2-font: 3rem;
-  --text-shadow: 0px 1px 2px rgb(98, 98, 98);
+  --text-shadow: 0px 0px 3px rgb(219, 219, 219);
   --shadow-general: 0 -1px 4px var(var(--light-color));
 }
 
@@ -32,7 +32,7 @@
   --gray-color: #fffafa;
   --secon-bg-color: #000000e3;
   --boxshadow-color: #000000;
-  --text-shadow: 0 1px 2px rgb(0, 0, 0);
+  --text-shadow: 0 0px 3px rgb(0, 0, 0);
   --input-borderColor: #5b5b5b;
   --light-color: #4f4f4f;
   --shadow-general: 0 -1px 4px var(--light-color);
@@ -510,11 +510,16 @@ section {
 
 /* SWIPER */
 .swiper {
-  width: 100%;
-  margin: auto;
+  width: 100% !important;
+  /* margin: auto; */
 }
 
 .card-slider .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
   background: linear-gradient(
     20deg,
     var(--container-color) 60%,
@@ -522,7 +527,6 @@ section {
     rgb(0, 0, 0) 110%
   );
 
-  width: 100% !important;
   border-radius: 10px;
   padding: 25px 25px 0 25px;
   border: 1px solid var(--primary-color);
@@ -535,7 +539,8 @@ section {
 }
 
 .card-slider .box .image {
-  width: 16rem;
+  display: block;
+  width: 100%;
 }
 
 .card-slider .box .image img {
@@ -545,6 +550,7 @@ section {
 }
 
 .card-slider .box .icons {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -565,6 +571,7 @@ section {
 }
 
 .card-slider .box .content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -582,6 +589,7 @@ section {
 }
 
 .btncard {
+  width: 100% ;
   display: flex;
   justify-content: center;
   margin-top: 1rem;
@@ -722,19 +730,19 @@ section {
   font-family: Arial, sans-serif;
 }
 
-.box {
+.professional .box {
   position: relative;
   margin: 10px 0;
   flex: 1 1 15rem;
 }
 
-.box .text {
+.professional .box .text {
   text-align: center;
   color: var(--text-color);
   font-size: 1rem;
 }
 
-.box .text big {
+.professional .box .text big {
   position: absolute;
   top: 45%;
   left: 50%;
@@ -742,7 +750,7 @@ section {
   color: var(--primary-color);
 }
 
-.box .text small {
+.professional .box .text small {
   display: block;
   font-weight: 700;
 }
