--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@
   --container-color: rgb(255, 255, 255);
   --text-color: #0b0b0b;
   --light-color: #f1f1f1;
-  --primary-color: #19d946;
+  --primary-color: #20dd4c;
   --secondary-color: #0a80a8;
   --gray-color: #414141;
-  --secon-bg-color: #f7fff5e3;
+  --secon-bg-color: #f0fff9e3;
   --norma-font: 2rem;
   --big-font: 2.5rem;
   --neon-box-shadow: 0 1.5px 0.6rem var(--primary-color);
@@ -244,34 +244,44 @@ section {
 
 .info.box {
   display: inline-flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0;
   width: 100%;
-  margin: 2rem 0 2rem;
+  margin: 2rem 0 2rem 0;
 }
 
-.info.box h5 {
-  font-weight: 600;
+/* .info.box .email-info {
+
+} */
+
+.info.box i {
+  text-decoration: none;
+  background-color: var(--secon-bg-color);
+  padding: 0.6rem;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  color: var(--primary-color);
+  font-weight: 400;
+  border: 0.5px var(--primary-color) solid;
 }
 
-.info.box span {
-  font-size: 0.9rem;
-  color: var(--gray-color);
-}
+
 
 .btn-box {
   display: flex;
   flex-direction: row;
   justify-content: left;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 20px;
 }
 
 .btn-box .btn {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 180px;
   height: 44px;
   background: var(--primary-color);
   color: var(--container-color);
@@ -511,6 +521,7 @@ section {
 /* SWIPER */
 .swiper {
   width: 100% !important;
+  padding: 2rem 0 2rem 0;
   /* margin: auto; */
 }
 
@@ -638,12 +649,17 @@ section {
 .swiper-button-prev::after {
   font-weight: bold;
 }
-
+.swiper-button-prev:hover,
 .swiper-button-next:hover,
 .swiper-button-prevskills:hover {
   color: var(--primary-color) !important;
   font-weight: bold;
   text-shadow: var(--neon-box-shadow);
+}
+
+.swiper-pagination .swiper-pagination-bullet{
+  color: var(--primary-color) !important;
+  background-color: var(--primary-color) !important;
 }
 
 /* SERVICES SKILLS CSS */
@@ -977,6 +993,7 @@ section {
   border-radius: 5px;
   padding: 0.8rem;
   outline: none;
+  border: 0.5px solid var(--primary-color);
 }
 
 .contact form input:focus-visible,
