--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,16 @@ body {
 /* CREANDO ONLOAD ANIMACION */
 
 .loading {
-  position: absolute;
+  position: fixed; /* Cambiado a fixed para que se mantenga en la vista del usuario al hacer scroll */
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-  
+  top: 50%; /* Centra verticalmente */
+  left: 50%; /* Centra horizontalmente */
+  transform: translate(-50%, -50%);
+  z-index: 999;
 }
 
 .loading-container {
@@ -85,7 +88,6 @@ body {
   border: 2px solid #00ff00;
   border-radius: 5px;
   overflow: hidden;
-  z-index: 999999;
 }
 
 .terminal {
@@ -123,7 +125,7 @@ body {
   background-color: #27c93f;
 }
 
-.titleonload{
+.titleonload {
   font-size: 14px;
   color: #00ff00;
 }
@@ -132,10 +134,36 @@ body {
   padding: 10px;
 }
 
+.terminal-body .commandline {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-flow: row;
+  color: white;
+  font-size: 12px;
+}
+
+.terminal .text {
+  display: flex;
+  flex-direction: row;
+}
+
+.terminal .inputtext {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.terminal .inputtext span:nth-child(1),
+.terminal .text span:nth-child(1) {
+  color: var(--primary-color);
+  margin-right: 4px;
+}
+
 #loading-text {
   margin: 0;
+  margin-top: 12px;
   font-size: 16px;
-  color: #00ff00;
+  color: var(--primary-color);
 }
 
 .progress-bar {
@@ -150,13 +178,18 @@ body {
 .progress {
   width: 0;
   height: 100%;
-  background-color: #00ff00;
+  background-color: var(--primary-color);
   border-radius: 5px;
-  animation: load 3s linear forwards;
+  animation: load 4s linear forwards;
 }
 
 .hidden {
   display: none !important;
+  z-index: -1 !important;
+}
+
+.loading.hidden {
+  z-index: -1 !important;
 }
 
 @keyframes load {
@@ -179,7 +212,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 10px 6%;
-  z-index: 9999;
+  z-index: 99;
   background-color: var(--container-color);
   overflow-x: auto;
 }
@@ -1533,6 +1566,9 @@ div:where(.swal2-container).swal2-center > .swal2-popup {
     width: 70% !important;
     padding: 12px;
   }
+  .loading-container {
+    width: 100%;
+  }
   .card-slider .box .image {
     margin: 0;
     width: auto;
@@ -1602,6 +1638,13 @@ div:where(.swal2-container).swal2-center > .swal2-popup {
 }
 
 @media (max-width: 420px) {
+  .loading-container {
+    width: 100%;
+  }
+
+  .loading-container span {
+    font-size: 10px !important;
+  }
   html {
     font-size: 80%;
   }
